<LinearLayout xmlns:a="http://schemas.android.com/apk/res/android"
    a:layout_width="match_parent"
    a:layout_height="match_parent"
    a:gravity="center_vertical"
    a:orientation="vertical"
    a:background="@drawable/bg_image_blur">
    <RelativeLayout a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:padding="16dp">
        <TextView a:id="@+id/lbl_login"
            a:layout_width="wrap_content"
            a:layout_height="wrap_content"
            a:layout_alignParentTop="true"
            a:layout_centerHorizontal="true"
            a:textColor="@android:color/white"
            a:text="@string/hello_login" />
        <EditText a:id="@+id/login_input"
            a:layout_width="match_parent"
            a:layout_height="wrap_content"
            a:layout_below="@id/lbl_login"
            a:inputType="textEmailAddress"
            a:hint="@string/email" />
        <EditText a:id="@+id/password_input"
            a:layout_width="match_parent"
            a:layout_height="wrap_content"
            a:layout_below="@id/login_input"
            a:inputType="textPassword"
            a:hint="@string/password" />
        <Button a:layout_width="wrap_content"
            a:layout_height="wrap_content"
            a:layout_alignParentLeft="true"
            a:layout_below="@id/password_input"
            a:text="@string/cancel" />
        <Button a:id="@+id/btn_login"
            a:layout_width="wrap_content"
            a:layout_height="wrap_content"
            a:layout_alignParentRight="true"
            a:layout_below="@id/password_input"
            a:text="@string/login" />
        <Button a:layout_width="wrap_content"
            a:layout_height="wrap_content"
            a:layout_below="@id/btn_login"
            a:layout_centerHorizontal="true"
            a:background="@android:color/transparent"
            a:textColor="@android:color/holo_blue_bright"
            a:text="@string/forgot_password"/>
    </RelativeLayout>

</LinearLayout>
